# embedded_project_structure

./: CMakeLists.txt  README.md  embedded_project.gitignore  setup_embedded.sh  workflow_cmake.yml
project/: CMakeLists.txt
project/source/: main.cpp
tests/: CMakeLists.txt
